; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_dvo_ns2501.c_ns2501_destroy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_dvo_ns2501.c_ns2501_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_dvo_device = type { %struct.ns2501_priv* }
%struct.ns2501_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.intel_dvo_device*)* @ns2501_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ns2501_destroy(%struct.intel_dvo_device* %0) #0 {
  %2 = alloca %struct.intel_dvo_device*, align 8
  %3 = alloca %struct.ns2501_priv*, align 8
  store %struct.intel_dvo_device* %0, %struct.intel_dvo_device** %2, align 8
  %4 = load %struct.intel_dvo_device*, %struct.intel_dvo_device** %2, align 8
  %5 = getelementptr inbounds %struct.intel_dvo_device, %struct.intel_dvo_device* %4, i32 0, i32 0
  %6 = load %struct.ns2501_priv*, %struct.ns2501_priv** %5, align 8
  store %struct.ns2501_priv* %6, %struct.ns2501_priv** %3, align 8
  %7 = load %struct.ns2501_priv*, %struct.ns2501_priv** %3, align 8
  %8 = icmp ne %struct.ns2501_priv* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load %struct.ns2501_priv*, %struct.ns2501_priv** %3, align 8
  %11 = call i32 @kfree(%struct.ns2501_priv* %10)
  %12 = load %struct.intel_dvo_device*, %struct.intel_dvo_device** %2, align 8
  %13 = getelementptr inbounds %struct.intel_dvo_device, %struct.intel_dvo_device* %12, i32 0, i32 0
  store %struct.ns2501_priv* null, %struct.ns2501_priv** %13, align 8
  br label %14

14:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @kfree(%struct.ns2501_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
